Bug 1651027 - Create a new trimmed-down class to store the expected gecko metrics. r=botond

We only use three fields from this so keeping a whole FrameMetrics around seems
heavyweight. We could even reduce it two fields by combining the zoom with the
devPixelsPerCSSPixel ratio but it seems a bit cleaner and more consistent to
do the division at the use site.

Differential Revision: https://phabricator.services.mozilla.com/D82761